--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* body */
 body {
     margin: 0;
     padding: 0;
@@ -6,17 +7,18 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
+    gap: 10px;
 }
-
+/* Menu bar element */
+.header {
+    display: flex;
+    background-color: #F6B302;
+}
 .profile-img {
     width: 150px;
     height: 60px;
 }
 
-nav {
-    display: flex;
-    background-color: #F6B302;
-}
 
 .nav-left {
     display: flex;
@@ -50,23 +52,8 @@ nav {
     align-items: center;
     justify-content: flex-end;
     flex: 0.5;
-   
+    
 }
-
-.container {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    flex-direction: column;
-    background-image: url(https://static.vecteezy.com/system/resources/previews/003/680/615/large_2x/portrait-of-confused-asian-man-looking-sideways-on-yellow-background-free-photo.jpg);
-    width: 100%;
-    background-position: top;
-    background-size: cover;
-}
-.container h1, .container p {
-    margin-left: 15px;
-}
-
 button {
     border: none;
     margin-right: 15px;
@@ -84,7 +71,22 @@ button a {
 a {
     text-decoration: none;
 }
+/* coontainer elements */
+.container {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url(https://static.vecteezy.com/system/resources/previews/003/680/615/large_2x/portrait-of-confused-asian-man-looking-sideways-on-yellow-background-free-photo.jpg);
+    width: 100%;
+    background-position: top;
+    background-size: cover;
+}
+.container h1, .container p {
+    margin-left: 15px;
+}
 
+/* footer elements */
 .footer-botton-left {
     display: flex;
     align-items: center;
