--- a/view/seller/seller.html
+++ b/view/seller/seller.html
@@ -1,12 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/main.js"></script>
 </head>
+
 <body>
-    
+    <nav class="header">
+        <div class="nav-left">
+            <div class="logo">
+                <img class="profile-img" src="../../img/etoolz-mall-logo.png" alt="">
+            </div>
+            <div class="pages">
+                <a class="home" href="../../index.html">Home</a>
+                <a class="shop" href="view/shop/shop.html">Shop</a>
+            </div>
+        </div>
+        <div class="nav-right">
+            <button><a href="view/seller/seller.html">Customer</a></button>
+        </div>
+    </nav>
+    <div id="dialog-cover" style="display: none">
+        <dialog open>
+            <div id="dialog-container">
+                <div class="container-header">
+                    <input id="name" type="text" placeholder="Name of product">
+                    <input id="price" type="text" placeholder="Pirce of product">
+                    <input id="description" type="text" placeholder="Description of product">
+                    <input id="currency" type="text" placeholder="Currency of product">
+                    <input id="image" type="text" placeholder="URL of product">
+                </div>
+                <div class="dialog-footer">
+                    <button id="cancel" onclick="onCancel()">Cancel</button>
+                    <button id="add">Add product</button>
+                </div>
+            </div>
+        </dialog>
+    </div>
+    <main class="product">
+        <div class="list-product">
+            <table border="" class="table">
+                <thead>
+                    <tr>
+                        <th>Name product</th>
+                        <th>Currency</th>
+                        <th>Price</th>
+                        <th>Description</th>
+                        <th>Image</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>T-shirt</td>
+                        <td>$</td>
+                        <td>50</td>
+                        <td>It good for boy</td>
+                        <td>image</td>
+                    </tr>
+                    <tr>
+                        <td>T-shirt</td>
+                        <td>$</td>
+                        <td>50</td>
+                        <td>It good for boy</td>
+                        <td>image</td>
+                    </tr>
+                    <tr>
+                        <td>T-shirt</td>
+                        <td>$</td>
+                        <td>50</td>
+                        <td>It good for boy</td>
+                        <td>image</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="list-product-botton">
+                <button onclick="onAddProduct()">Add product</button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="centect">
+            <div class="box">
+                <h3>Follow US</h3>
+                <div class="box-botton">
+                    <span>Phone number: 0969293520</span>
+                    <span>Facebook page: eToolzMall</span>
+                    <span>Email: eToolzMall@gmail.com</span>
+                </div>
+            </div>
+            <div class="box">
+                <h3>Explore</h3>
+                <div class="box-botton">
+                    <span>outfit finding</span>
+                    <span>page profile</span>
+                    <span>About</span>
+                </div>
+            </div>
+            <div class="box">
+                <h3>Company</h3>
+                <div class="box-botton">
+                    <span>About US</span>
+                    <span>Contact us</span>
+                    <span>Our Parthers</span>
+                </div>
+            </div>
+            <div class="box">
+                <h3>Employers</h3>
+                <div class="box-botton">
+                    <span>Register for Free</span>
+                    <span>Post a outfit Ad</span>
+                    <span>Products & Prices</span>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="js/main.js"></script>
+
 </html>
