[CREATE_PRODUCT] create product page and store product on LocalStorage

--- a/view/seller/css/style.css
+++ b/view/seller/css/style.css
@@ -81,7 +81,11 @@ a {
     flex: 1;
     gap: 15px;
 }
-
+.table img {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+}
 .list-product {
     display: flex;
     flex-direction: column;
