--- a/view/seller/seller.html
+++ b/view/seller/seller.html
@@ -52,30 +52,12 @@
                         <th>Price</th>
                         <th>Description</th>
                         <th>Image</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>T-shirt</td>
-                        <td>$</td>
-                        <td>50</td>
-                        <td>It good for boy</td>
-                        <td>image</td>
-                    </tr>
-                    <tr>
-                        <td>T-shirt</td>
-                        <td>$</td>
-                        <td>50</td>
-                        <td>It good for boy</td>
-                        <td>image</td>
-                    </tr>
-                    <tr>
-                        <td>T-shirt</td>
-                        <td>$</td>
-                        <td>50</td>
-                        <td>It good for boy</td>
-                        <td>image</td>
-                    </tr>
+                <tbody id="product-container">
+                    
                 </tbody>
             </table>
             <div class="list-product-botton">
