--- a/view/shop/shop.html
+++ b/view/shop/shop.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seller page</title>
+    <title>Shop page</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -21,17 +21,13 @@
                 <a class="shop" href="shop.html">Shop</a>
             </div>
         </div>
+        <div class="nav-center">
+            <input class="seach" type="text" placeholder="seach...">
+        </div>
         <div class="nav-right">
             <button><a href="../seller/seller.html">Seller</a></button>
         </div>
     </nav>
-    <div id="dialog-cover" style="display: none" >
-        <dialog open >
-            <div id="dialog-container">
-                
-                </div>
-            </div>
-        </dialog>
     </div>
     <div class="main">
         <main id="container">
